# sdc_aws_utils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.dev.txt  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
sdc_aws_utils/: aws.py  config.py  logging.py  slack.py
sdc_aws_utils/tests/: conftest.py  test_aws.py  test_config.py  test_logging.py  test_slack.py
tests/: test_aws.py  test_config.py  test_logging.py  test_slack.py
