[tool.poetry]
name = "sdc_aws_utils"
version = "0.1.0"
description = "This is a Python package that includes utility functions used throughout the different pipeline repos."
authors = ["Damian Barrous-Dume <fdbarrous@navteca.com>"]
repository = "https://github.com/HERMES-SOC/sdc_aws_utils"
documentation = "https://dbarrous.github.io/sdc-aws-utils/"
readme = "README.md"
packages = [
  {include = "sdc_aws_utils"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"
moto = "4.1.6"
astropy = "5.1.1"
pytest-astropy = "0.10.0"
psycopg = "3.1.8"
flake8 = "6.0.0"
black = "23.1.0"
slack_sdk = "3.19.5"
hermes_core = { git = "https://github.com/HERMES-SOC/hermes_core.git", branch = "main" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["sdc_aws_utils"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["sdc_aws_utils"]